[gd_scene load_steps=4 format=3 uid="uid://coaayj0c3m7cn"]

[ext_resource type="Script" path="res://Utility/item_option.gd" id="1_i08ou"]
[ext_resource type="Texture2D" uid="uid://y4iqp8x5ljf1" path="res://Textures/Items/Weapons/sword.png" id="1_u08mk"]
[ext_resource type="FontFile" uid="uid://bm3i5odnir43l" path="res://Font/tenderness.otf" id="2_7anjc"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.159988
offset_bottom = -0.0400047
color = Color(0.54902, 0.54902, 0.54902, 1)
script = ExtResource("1_i08ou")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_u08mk")

[node name="label_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_7anjc")
text = "Name"
horizontal_alignment = 1

[node name="label_desc" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_7anjc")
theme_override_font_sizes/font_size = 8
text = "Description of item"
autowrap_mode = 3

[node name="label_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_7anjc")
theme_override_font_sizes/font_size = 12
text = "Level : 1"

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
